menu API test 개발1-2