@@ -7,7 +7,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -15,8 +14,8 @@ public class MenuService {
 
     private final MenuRepository menuRepository;
 
-    public List<MenuResponse> getAllMenus() {
-        List<Menu> menus = menuRepository.findAllByOrderByLevelAscLeftAsc();
+    public List<MenuResponse> getAllDrives() {
+        List<Menu> menus = menuRepository.findByType("drive");
 
         return menus.stream()
                 .map(menu -> new MenuResponse(
@@ -28,28 +27,37 @@ public class MenuService {
                         menu.getDisplay() != null ? menu.getDisplay().name() : null,
                         menu.getPathUrl()
                 ))
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public String getMenuTitleById(Long id) {
-        Menu menu = menuRepository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("해당 메뉴가 존재하지 않습니다."));
-        return menu.getTitle();
+    public List<MenuResponse> getAllMenusByDrive(String driveTitle) {
+        // 1. 드라이브 루트 메뉴 조회
+        Menu rootMenu = menuRepository.findByTitleAndType(driveTitle, "drive")
+                .orElseThrow(() -> new RuntimeException("Drive not found: " + driveTitle));
+
+        // 2. 하위 메뉴 트리 구성
+        return buildMenuTree(rootMenu.getId());
     }
 
-    public List<MenuResponse> getChildrenByParentId(Long parentId) {
+    private List<MenuResponse> buildMenuTree(Long parentId) {
         List<Menu> children = menuRepository.findByParentIdOrderByLevelAscLeftAsc(parentId);
 
         return children.stream()
-                .map(menu -> new MenuResponse(
-                        menu.getId(),
-                        menu.getParentId(),
-                        menu.getTitle(),
-                        menu.getType(),
-                        menu.getValue(),
-                        menu.getDisplay() != null ? menu.getDisplay().name() : null,
-                        menu.getPathUrl()
-                ))
-                .collect(Collectors.toList());
+                .map(menu -> {
+                    MenuResponse response = new MenuResponse(
+                            menu.getId(),
+                            menu.getParentId(),
+                            menu.getTitle(),
+                            menu.getType(),
+                            menu.getValue(),
+                            menu.getDisplay() != null ? menu.getDisplay().name() : null,
+                            menu.getPathUrl()
+                    );
+                    // 재귀 호출로 하위 children 구성
+                    List<MenuResponse> subChildren = buildMenuTree(menu.getId());
+                    response.setChildren(subChildren);
+                    return response;
+                })
+                .toList();
     }
 }
